codewind-che-sidecar/scripts/kube/codewind_template.yaml
################################################################################
# Copyright (c) 2019 IBM Corporation and others.
# All rights reserved. This program and the accompanying materials
# are made available under the terms of the Eclipse Public License v2.0
# which accompanies this distribution, and is available at
# http://www.eclipse.org/legal/epl-v20.html
#
# Contributors:
#     IBM Corporation - initial API and implementation
################################################################################


apiVersion: v1
kind: Service
metadata:
  name: codewind-release-WORKSPACE_ID_PLACEHOLDER
  labels:
    app: codewind-pfe
    workspace: WORKSPACE_ID_PLACEHOLDER
  ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicaSet
      name: OWNER_REFERENCE_NAME_PLACEHOLDER
      uid: OWNER_REFERENCE_UID_PLACEHOLDER
spec:
  ports:
    - port: 9191
      name: portal-http
  selector:
    app: codewind-pfe

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: codewind-release-WORKSPACE_ID_PLACEHOLDER
  labels:
    app: codewind-pfe
    workspace: WORKSPACE_ID_PLACEHOLDER

spec:
  selector:
    matchLabels:
      app: codewind-pfe
  replicas: 1
  template:
    metadata:
      labels:
        app: codewind-pfe
        workspace: WORKSPACE_ID_PLACEHOLDER
      ownerReferences:
        - apiVersion: apps/v1
          blockOwnerDeletion: true
          controller: true
          kind: ReplicaSet
          name: OWNER_REFERENCE_NAME_PLACEHOLDER
          uid: OWNER_REFERENCE_UID_PLACEHOLDER
      annotations:
        productName: "codewind"
        productID: "codewind"
        productVersion: "19.05"

    spec:
      serviceAccountName: SERVICE_ACCOUNT_PLACEHOLDER
      affinity:        
          nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              nodeSelectorTerms:
              - matchExpressions:
                - key: beta.kubernetes.io/arch
                  operator: In
                  values:
                  - amd64
                  - ppc64le
      volumes:
      - name: shared-workspace
        persistentVolumeClaim:
          claimName: PVC_NAME_PLACEHOLDER
      - name: buildah-volume
      - name: registry-secret
        secret:
          defaultMode: 0777
          secretName: REGISTRY_SECRET_PLACEHOLDER
      containers:
      - name: codewind-pfe
        image: sys-mcs-docker-local.artifactory.swg-devops.com/codewind-pfe-amd64:latest
        imagePullPolicy: "Always"
        securityContext:
          privileged: true
        volumeMounts:
        - name: shared-workspace
          mountPath: /codewind-workspace
          subPath: "WORKSPACE_ID_PLACEHOLDER/projects"
        - name: buildah-volume
          mountPath: "/var/lib/containers"
        - name: registry-secret
          mountPath: "/tmp/secret"
        ports:
        - containerPort: 9191
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 2Gi
            cpu: 500m
