codewind-che-sidecar/scripts/kube/codewind_route_template.yaml
################################################################################
# Copyright (c) 2019 IBM Corporation and others.
# All rights reserved. This program and the accompanying materials
# are made available under the terms of the Eclipse Public License v2.0
# which accompanies this distribution, and is available at
# http://www.eclipse.org/legal/epl-v20.html
#
# Contributors:
#     IBM Corporation - initial API and implementation
################################################################################

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: codewind-pfe
    pfeWorkspace: WORKSPACE_ID_PLACEHOLDER
  name: codewind-WORKSPACE_ID_PLACEHOLDER
spec:
  host: codewind-WORKSPACE_ID_PLACEHOLDER-CHE_INGRESS_HOST_PLACEHOLDER
  port:
    targetPort: portal-http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: codewind-WORKSPACE_ID_PLACEHOLDER
    weight: 100
status:
  ingress:
    - conditions:
      host: codewind-WORKSPACE_ID_PLACEHOLDER-CHE_INGRESS_HOST_PLACEHOLDER
      routerName: router
      wildcardPolicy: None
